--- a/db/projectTypes.json
+++ b/db/projectTypes.json
@@ -1,10 +1,9 @@
 {
-  "web": { "icon": "mdi:web", "color": "#ffc25c" },
-  "mobile": { "icon": "mdi:cellphone", "color": "#5b29ff" },
-  "fullstack": { "icon": "mdi:webhook", "color": "#ff3e29" },
-  "library": { "icon": "mdi:library", "color": "#ff298d" },
-  "framework": { "icon": "mdi:semantic-web", "color": "#ff298d" },
-  "api": { "icon": "mdi:server", "color": "#29ffad" },
-  "desktop": { "icon": "mdi:remote-desktop", "color": "#ff3e29" },
-  "terminal": { "icon": "mdi:console", "color": "#219419" }
+  "web": { "icon": "mdi:web", "color": "#ff8c00", "es": "web" },
+  "mobile": { "icon": "mdi:cellphone", "color": "#ff3e29", "es": "móvil" },
+  "library": { "icon": "mdi:library", "color": "#ff298d", "es": "librería" },
+  "framework": { "icon": "mdi:semantic-web", "color": "#ff298d", "es": "framework" },
+  "api": { "icon": "mdi:server", "color": "#29ffad",  "es": "API" },
+  "desktop": { "icon": "mdi:remote-desktop", "color": "#ff3e29", "es": "escritorio" },
+  "terminal": { "icon": "mdi:console", "color": "#219419", "es": "terminal" }
 }
