--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "astro-icon": "^0.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.7"
   },
